Refactor: GlobalExceptionHandler get(0) -> getFirst()